Linked ecom buttons to button color swatch, removed padding from logo and added it to header, fixed dropdown not staying visible on hover

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -53,18 +53,12 @@ body {
 
 .bk-header {
     background-color: @color-swatch2;
-    padding: 2.5em 0 1.5em;
+    padding: 2.5em 0;
     margin: 0 auto;
  .companyheader {
         float: none;
         .logo {
-            padding: 0.5em 0;
-        }
-        .companyname {
-            padding: 0.6em 0;
-            @media @mobile {
-                padding: 0.8em 0;
-            }
+            margin-top: 2px;
         }
         .logo, .companyname {
             float: left;
@@ -387,13 +381,13 @@ body {
                         li {
                             display: block;
                             width: 100%;
-                                .box-sizing {
-                                    a {
-                                        display: block;
-                                        color: @color-swatch5;
-                                        padding: 0;
-                                    }
+                            .box-sizing {
+                                a {
+                                    display: block;
+                                    color: @color-swatch5;
+                                    padding: 0;
                                 }
+                            }
                         }
                     }
                 }
@@ -1501,6 +1495,7 @@ hr {
             }
         }
         .btn {
+            color: @font-swatch6-color;
             width: 70%;
             margin: 2.5em 0;
             @media only screen and (max-width: 1200px) { 
@@ -1525,6 +1520,7 @@ hr {
             }
             &:hover {
                 background-color: @font-swatch7-background-color-hover;
+                color: @font-swatch6-color-hover;
             }
         }
 
